fix: Let nav cover footer instead of being clipped

--- a/_sass/open-project-header-footer.scss
+++ b/_sass/open-project-header-footer.scss
@@ -168,7 +168,6 @@ body > .underlay > footer {
 
 body > .underlay.footer {
   background: #2E333B;
-  z-index: 5;
 }
 
 body > .underlay > header {
